--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -1061,14 +1061,26 @@
     "        actions = df_ann[target_c].unique()\n",
     "        action_map = {a: i for i, a in enumerate(actions)}\n",
     "        \n",
-    "        numeric_actions = df_ann[target_c].map(action_map)\n",
+    "        numeric_actions = df_ann[target_c].map(action_map).values\n",
+    "        \n",
+    "        # Downsample for plotting if too large to prevent kernel crash\n",
+    "        MAX_POINTS = 100000\n",
+    "        if len(numeric_actions) > MAX_POINTS:\n",
+    "            print(f\"Downsampling timeline from {len(numeric_actions)} to {MAX_POINTS} points for visualization.\")\n",
+    "            step = len(numeric_actions) // MAX_POINTS\n",
+    "            numeric_actions_plot = numeric_actions[::step]\n",
+    "            x_axis = np.arange(0, len(numeric_actions), step)[:len(numeric_actions_plot)]\n",
+    "        else:\n",
+    "            numeric_actions_plot = numeric_actions\n",
+    "            x_axis = np.arange(len(numeric_actions))\n",
     "        \n",
     "        plt.figure(figsize=(15, 4))\n",
-    "        plt.plot(numeric_actions, drawstyle='steps-post')\n",
+    "        plt.plot(x_axis, numeric_actions_plot, drawstyle='steps-post')\n",
     "        plt.yticks(list(action_map.values()), list(action_map.keys()))\n",
     "        plt.title('Action Timeline')\n",
     "        plt.xlabel('Frame')\n",
     "        plt.ylabel('Action')\n",
+    "        plt.grid(True, alpha=0.3)\n",
     "        plt.show()\n",
     "    else:\n",
     "        print(\"Target column not found.\")\n",
